--- a/BookStore/Views/MyShared/Navbar.cshtml
+++ b/BookStore/Views/MyShared/Navbar.cshtml
@@ -1,7 +1,7 @@
 ﻿<nav class="navbar navbar-default navbar-fixed-top">
     <div class="main-nav">
         <div class="container">
-            <div class="navbar-header page-scroll">
+            <div class="navbar-header page-scroll" style="margin-right:0.5em;">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
                     <span class="sr-only">Chronicle</span>
                     <span class="icon-bar"></span>
