--- a/BookStore/Assets/css/override-navbar.css
+++ b/BookStore/Assets/css/override-navbar.css
@@ -620,7 +620,7 @@ ul.dropdown-menu:hover a.s-menu {
 /* //banner */
 
 .section {
-    padding: 5em 0;
+    padding: 0;
 }
 
 /*-- counter timer --*/
