--- a/BookStore/Assets/css/shop.css
+++ b/BookStore/Assets/css/shop.css
@@ -584,9 +584,9 @@ ul.stars li a:hover {
 
 .product-chr-info {
     padding: 10px;
-    -webkit-transition: .3s all;
-    -moz-transition: .3s all;
-    transition: .3s all;
+    -webkit-transition: .25s all;
+    -moz-transition: .25s all;
+    transition: .25s all;
     border-width: 1px;
     border-style: solid !important;
     border-color: #DDD;
@@ -1039,7 +1039,7 @@ span.item_price {
     display: inline-block;
     white-space: nowrap;
     overflow: hidden;
-    font-size: 0.9em;
+    font-size: 1.1em;
     color: #fff;
     border: none;
     width: 100%;
@@ -1052,27 +1052,27 @@ span.item_price {
     text-decoration: none;
     text-transform: capitalize;
     outline: none;
-    transition: 0.0s all;
-    /*-webkit-transition: 0.5s all;
-    -moz-transition: 0.5s all;
-    -o-transition: 0.5s all;
-    -ms-transition: 0.5s all;*/
+    transition: 0.25s all;
+    -webkit-transition: 0.25s all;
+    -moz-transition: 0.25s all;
+    -o-transition: 0.25s all;
+    -ms-transition: 0.25s all;
 }
 
 .chr-cart i {
+    padding-right:1px;
 	font-size: 1.2em;
-	font-weight: 600;
 	background: #fff;
 	width: 28px;
 	height: 28px;
 	line-height: 27px;
 	color: #000;
 	border-radius: 50%;
-	transition: 0.0s all;
-	/*-webkit-transition: 0.5s all;
-	-moz-transition: 0.5s all;
-	-o-transition: 0.5s all;
-	-ms-transition: 0.5s all;*/
+	transition: 0.25s all;
+	-webkit-transition: 0.25s all;
+	-moz-transition: 0.25s all;
+	-o-transition: 0.25s all;
+	-ms-transition: 0.25s all;
 }
 
 .chr-cart:hover {
@@ -1080,12 +1080,12 @@ span.item_price {
 	color: #FFF;
 }
 
-.chr-cart:hover i {
+/*.chr-cart:hover i {
 	background: transparent;
 	color: #fff;
 	font-size: 1.6em;
 	font-weight: normal;
-}
+}*/
 
 ul.footer_list_icons.single_in li {
 	color: #2f2f2f;
