--- a/BookStore/Views/Home1/Author.cshtml
+++ b/BookStore/Views/Home1/Author.cshtml
@@ -21,7 +21,7 @@
     <div class="container" style="margin-top:150px">
         <div class="row">
             <div class="col-lg-3" style="background-color: #eee;padding-top:10px">
-                <div class="left-sidebar">
+                <div class="left-sidebar side-menu">
                     @Html.Partial("SideMenu")
                 </div>
             </div>
