--- a/BookStore/Views/Home1/Index.cshtml
+++ b/BookStore/Views/Home1/Index.cshtml
@@ -41,7 +41,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-3" style="background-color: #eee;padding-top:10px">
-                <div class="left-sidebar">
+                <div class="left-sidebar side-menu">
                     @Html.Partial("SideMenu")
                 </div>
             </div>
