--- a/BookStore/Views/MyShared/MainLayout.cshtml
+++ b/BookStore/Views/MyShared/MainLayout.cshtml
@@ -24,7 +24,7 @@
     <!-- Range-slider-css -->
     <link rel="stylesheet" type="text/css" href="~/Assets/css/jquery-ui1.css">
     <!-- common-css -->
-    <link href="~/Assets/css/style.css" type="text/css" rel="stylesheet" media="all">
+    @*<link href="~/Assets/css/style.css" type="text/css" rel="stylesheet" media="all">*@
     <!-- font-awesome icons -->
     <link href="~/Assets/font-awesome/css/font-awesome.css" rel="stylesheet">
     <!-- override navbar -->
