--- a/BookStore/Views/Home1/Index.cshtml
+++ b/BookStore/Views/Home1/Index.cshtml
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <div id="slider-carousel" class="carousel slide" data-ride="carousel">
+                <div id="home-carousel" style="position:relative" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="item active" style="padding-left:0">
                             <img src="~/Assets/images/home/slider1.png" />
@@ -25,12 +25,12 @@
                             <img src="~/Assets/images/home/slider3.jpg" />
                         </div>
                     </div>
-                    @*<a href="#slider-carousel" class="left control-carousel hidden-xs" data-slide="prev">
+                    <a class="left home-carousel-control" href="#home-carousel" data-slide="prev">
                         <i class="fa fa-angle-left"></i>
                     </a>
-                    <a href="#slider-carousel" class="right control-carousel hidden-xs" data-slide="next">
+                    <a class="right home-carousel-control" href="#home-carousel" data-slide="next">
                         <i class="fa fa-angle-right"></i>
-                    </a>*@
+                    </a>
                 </div>
             </div>
         </div>
@@ -40,12 +40,12 @@
 <section style="margin-top:100px">
     <div class="container">
         <div class="row">
-            <div class="col-lg-3" style="background-color: #eee;padding-top:10px">
+            <div class="col-lg-3 side-menu-holder">
                 <div class="left-sidebar side-menu">
                     @Html.Partial("SideMenu")
                 </div>
             </div>
-            
+
             <div id="search_result" class="left-ads-display col-md-9">
                 @foreach (var item in Products)
                 {
@@ -53,7 +53,7 @@
                         <div class="product-chr-info chr">
                             <div class="thumbnail">
                                 @if (string.IsNullOrEmpty(item.AvatarImage))
-                {
+                                {
                                     <img style="height:150px;width:100%;object-fit:contain"
                                          src="/Assets/images/home/default-image.png" />
                                 }
