--- a/BookStore/Views/Search1/Index.cshtml
+++ b/BookStore/Views/Search1/Index.cshtml
@@ -9,7 +9,7 @@
 <section>
     <div class="container" style="margin-top:150px">
         <div class="row">
-            <div class="col-lg-3" style="background-color: #eee">
+            <div class="col-lg-3 side-menu-holder">
                 <div class="left-sidebar side-menu">
                     <label class="check-container" for="is_correctly">
                         Tìm chính xác <input class="pull-right" id="is_correctly" type="checkbox" />
@@ -69,7 +69,7 @@
                     alert('Không tìm thấy');
                     return;
                 }
-                
+
                 // đổ dữ liệu ra page
                 $('#search_result').html("");
                 $('#search_result').append(data);
